# lab2_informatika

./: CMakeLists.txt  array_enumerator.h  bit_sequence.h  dynamic_array.h  exceptions.h  icollection.h  immutable_array_sequence.h  immutable_list_sequence.h  linked_list.h  list_enumerator.h  main.cpp  mutable_array_sequence.h  mutable_list_sequence.h  option.h  sequence.h  sequence_io.h  tests.cpp
